--- a/friends.html
+++ b/friends.html
@@ -82,7 +82,7 @@
               </div>
               <div class="icons d-flex align-center">
                   <i class="fa-regular fa-bell fa-lg c-pink p-relative"></i>
-                  <img src="/img/avatar.png" alt="">
+                  <img src="img/avatar.png" alt="">
               </div>
           </div>
           <h1 class="p-relative c-pink">Friends</h1>
@@ -94,7 +94,7 @@
                     <i class="fa-solid fa-envelope c-pink bg-purple rad-half p-10"></i>
                 </div>
                 <div class="txt-c mb-5">
-                    <img src="/img/friend-01.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
+                    <img src="img/friend-01.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
                     <h4 class="c-pink mb-5">Ahmed Ali</h4>
                     <p class="c-purple">JS Developer</p>
                 </div>
@@ -126,7 +126,7 @@
                     <i class="fa-solid fa-envelope c-pink bg-purple rad-half p-10"></i>
                 </div>
                 <div class="txt-c mb-5">
-                    <img src="/img/friend-02.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
+                    <img src="img/friend-02.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
                     <h4 class="c-pink mb-5">Abdo Elbalf</h4>
                     <p class="c-purple">WordPress</p>
                 </div>
@@ -159,7 +159,7 @@
                     <i class="fa-solid fa-envelope c-pink bg-purple rad-half p-10"></i>
                 </div>
                 <div class="txt-c mb-5">
-                    <img src="/img/friend-01.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
+                    <img src="img/friend-01.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
                     <h4 class="c-pink mb-5">Mahmuod Kahraba</h4>
                     <p class="c-purple">Android</p>
                 </div>
@@ -192,7 +192,7 @@
                     <i class="fa-solid fa-envelope c-pink bg-purple rad-half p-10"></i>
                 </div>
                 <div class="txt-c mb-5">
-                    <img src="/img/friend-03.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
+                    <img src="img/friend-03.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
                     <h4 class="c-pink mb-5">Mazen Ahmed</h4>
                     <p class="c-purple">Back-End Developer</p>
                 </div>
@@ -225,7 +225,7 @@
                     <i class="fa-solid fa-envelope c-pink bg-purple rad-half p-10"></i>
                 </div>
                 <div class="txt-c mb-5">
-                    <img src="/img/friend-04.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
+                    <img src="img/friend-04.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
                     <h4 class="c-pink mb-5">Ahmed Esam</h4>
                     <p class="c-purple">Ui/UX Designer</p>
                 </div>
@@ -257,7 +257,7 @@
                     <i class="fa-solid fa-envelope c-pink bg-purple rad-half p-10"></i>
                 </div>
                 <div class="txt-c mb-5">
-                    <img src="/img/friend-01.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
+                    <img src="img/friend-01.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
                     <h4 class="c-pink mb-5">Mohamed Walid</h4>
                     <p class="c-purple">Front-End Developer</p>
                 </div>
@@ -289,7 +289,7 @@
                     <i class="fa-solid fa-envelope c-pink bg-purple rad-half p-10"></i>
                 </div>
                 <div class="txt-c mb-5">
-                    <img src="/img/friend-02.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
+                    <img src="img/friend-02.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
                     <h4 class="c-pink mb-5">Omar Taha</h4>
                     <p class="c-purple">Markting</p>
                 </div>
@@ -322,7 +322,7 @@
                     <i class="fa-solid fa-envelope c-pink bg-purple rad-half p-10"></i>
                 </div>
                 <div class="txt-c mb-5">
-                    <img src="/img/friend-04.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
+                    <img src="img/friend-04.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
                     <h4 class="c-pink mb-5">Mohamed Ahmed</h4>
                     <p class="c-purple">Full-Stack Developer</p>
                 </div>
@@ -354,7 +354,7 @@
                     <i class="fa-solid fa-envelope c-pink bg-purple rad-half p-10"></i>
                 </div>
                 <div class="txt-c mb-5">
-                    <img src="/img/friend-03.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
+                    <img src="img/friend-03.jpg" class="w-100 h-100 rad-half mb-5 mt-5">
                     <h4 class="c-pink mb-5">Ahmed Abdallah</h4>
                     <p class="c-purple">NodeJs Developer</p>
                 </div>
