--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&family=Work+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,800;0,900;1,300;1,800&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&family=Work+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,800;0,900;1,300;1,800&display=swap" rel="stylesheet">
     <title>Dashborad</title>
 </head>
 <body>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="icons d-flex align-center">
                     <i class="fa-regular fa-bell fa-lg c-pink p-relative"></i>
-                    <img src="/img/avatar.png" alt="">
+                    <img src="img/avatar.png" alt="">
                 </div>
             </div>
             <h1 class="p-relative c-pink">Dashborad</h1>
@@ -95,9 +95,9 @@
                             <h2 class="c-pink mt-0">welcome</h2>
                             <span class="c-purple mt-5 fs-14">Elsayed</span>
                         </div>
-                        <img src="/img/welcome.png" class="hide-mobile">
+                        <img src="img/welcome.png" class="hide-mobile">
                     </div>
-                    <img src="/img/avatar.png" class="avatar">
+                    <img src="img/avatar.png" class="avatar">
                     <div class="text txt-c d-flex p-20 mt-20 mb-20 block-mobile">
                         <div class="c-purple">Elsayed <span class="d-block c-sky mt-10 fs-14">Front-end Developer</span></div>
                         <div class="c-purple">120 <span class="d-block c-sky mt-10 fs-14">Projects</span></div>
@@ -193,34 +193,34 @@
                 <div class="latest-news bg-navy p-20 rad-10 block-mobile txt-c-mobile">
                     <h2 class="mb-20 c-pink">latest News</h2>
                     <div class="news-row d-flex align-center mb-15 p-10">
-                        <img src="/img/news-01.png" alt="" class="rad-6 mr-10">
+                        <img src="img/news-01.png" alt="" class="rad-6 mr-10">
                         <div class="info mr-10">
                             <h2 class="c-pink mb-5">Created SASS Section</h2>
-                            <p class="fs-14 c-purple">New SASS Examples & Tutorials</p>    
+                            <p class="fs-14 c-purple">New SASS Examples & Tutorials</p>
                         </div>
                         <span class="d-block bg-purple c-pink btn-shape">3 Days</span>
                     </div>
                     <div class="news-row d-flex align-center mb-15 p-10">
-                        <img src="/img/news-02.png" alt="" class="rad-6 mr-10">
+                        <img src="img/news-02.png" alt="" class="rad-6 mr-10">
                         <div class="info mr-10">
                             <h2 class="c-pink mb-5">Created SASS Section</h2>
-                            <p class="fs-14 c-purple">New SASS Examples & Tutorials</p>    
+                            <p class="fs-14 c-purple">New SASS Examples & Tutorials</p>
                         </div>
                         <span class="d-block bg-purple c-pink btn-shape">3 Days</span>
                     </div>
                     <div class="news-row d-flex align-center mb-15 p-10">
-                        <img src="/img/news-03.png" alt="" class="rad-6 mr-10">
+                        <img src="img/news-03.png" alt="" class="rad-6 mr-10">
                         <div class="info mr-10">
                             <h2 class="c-pink mb-5">Created SASS Section</h2>
-                            <p class="fs-14 c-purple">New SASS Examples & Tutorials</p>    
+                            <p class="fs-14 c-purple">New SASS Examples & Tutorials</p>
                         </div>
                         <span class="d-block bg-purple c-pink btn-shape">3 Days</span>
                     </div>
                     <div class="news-row d-flex align-center mb-15 p-10">
-                        <img src="/img/news-04.png" alt="" class="rad-6 mr-10">
+                        <img src="img/news-04.png" alt="" class="rad-6 mr-10">
                         <div class="info mr-10">
                             <h2 class="c-pink mb-5">Created SASS Section</h2>
-                            <p class="fs-14 c-purple">New SASS Examples & Tutorials</p>    
+                            <p class="fs-14 c-purple">New SASS Examples & Tutorials</p>
                         </div>
                         <span class="d-block bg-purple c-pink btn-shape">3 Days</span>
                     </div>
@@ -231,37 +231,37 @@
                     <div class="between-flex mb-20">
                         <div class="info">
                             <h3 class="mb-5 c-pink">Record One New Video</h3>
-                            <p class="c-purple">Record Python Create Exe Project</p> 
+                            <p class="c-purple">Record Python Create Exe Project</p>
                         </div>
-                        <i class="fa-solid fa-trash-can c-pink"></i> 
+                        <i class="fa-solid fa-trash-can c-pink"></i>
                     </div>
                     <div class="between-flex mb-20">
                         <div class="info">
                             <h3 class="mb-5 c-pink">Record One New Video</h3>
-                            <p class="c-purple">Record Python Create Exe Project</p> 
+                            <p class="c-purple">Record Python Create Exe Project</p>
                         </div>
-                        <i class="fa-solid fa-trash-can c-pink"></i> 
+                        <i class="fa-solid fa-trash-can c-pink"></i>
                     </div>
                     <div class="between-flex mb-20">
                         <div class="info">
                             <h3 class="mb-5 c-pink">Record One New Video</h3>
-                            <p class="c-purple">Record Python Create Exe Project</p> 
+                            <p class="c-purple">Record Python Create Exe Project</p>
                         </div>
-                        <i class="fa-solid fa-trash-can c-pink"></i> 
+                        <i class="fa-solid fa-trash-can c-pink"></i>
                     </div>
                     <div class="between-flex done mb-20">
                         <div class="info">
                             <h3 class="mb-5 c-pink">Record One New Video</h3>
-                            <p class="c-purple">Record Python Create Exe Project</p> 
+                            <p class="c-purple">Record Python Create Exe Project</p>
                         </div>
-                        <i class="fa-solid fa-trash-can c-pink"></i> 
+                        <i class="fa-solid fa-trash-can c-pink"></i>
                     </div>
                     <div class="between-flex">
                         <div class="info">
                             <h3 class="mb-5 c-pink">Record One New Video</h3>
-                            <p class="c-purple">Record Python Create Exe Project</p> 
+                            <p class="c-purple">Record Python Create Exe Project</p>
                         </div>
-                        <i class="fa-solid fa-trash-can c-pink"></i> 
+                        <i class="fa-solid fa-trash-can c-pink"></i>
                     </div>
                 </div>
                 <!--Top Search Word-->
@@ -302,7 +302,7 @@
                     <ul>
                         <li class="pb-10 mb-15 between-flex bb">
                             <div class="d-flex align-center">
-                                <img src="/img/pdf (2).png" alt="" class="mr-10 ">
+                                <img src="img/pdf (2).png" alt="" class="mr-10 ">
                                 <div>
                                     <span class="d-block c-pink">my-file.pdf</span>
                                     <span class="c-purple">Elsayed</span>
@@ -312,7 +312,7 @@
                         </li>
                         <li class="pb-10 mb-15 between-flex bb">
                             <div class="d-flex align-center">
-                                <img src="/img/avi.png" alt="" class="mr-10 ">
+                                <img src="img/avi.png" alt="" class="mr-10 ">
                                 <div>
                                     <span class="d-block c-pink">my-file.pdf</span>
                                     <span class="c-purple">Elsayed</span>
@@ -322,7 +322,7 @@
                         </li>
                         <li class="pb-10 mb-15 between-flex bb">
                             <div class="d-flex align-center">
-                                <img src="/img/dll.png" alt="" class="mr-10">
+                                <img src="img/dll.png" alt="" class="mr-10">
                                 <div>
                                     <span class="d-block c-pink">my-file.pdf</span>
                                     <span class="c-purple">Elsayed</span>
@@ -332,7 +332,7 @@
                         </li>
                         <li class="pb-10 mb-15 between-flex bb">
                             <div class="d-flex align-center">
-                                <img src="/img/psd.png" alt="" class="mr-10 ">
+                                <img src="img/psd.png" alt="" class="mr-10 ">
                                 <div>
                                     <span class="d-block c-pink">my-file.pdf</span>
                                     <span class="c-purple">Elsayed</span>
@@ -342,7 +342,7 @@
                         </li>
                         <li class="pb-10 mb-15 between-flex">
                             <div class="d-flex align-center">
-                                <img src="/img/dll.png" alt="" class="mr-10 ">
+                                <img src="img/dll.png" alt="" class="mr-10 ">
                                 <div>
                                     <span class="d-block c-pink">my-file.pdf</span>
                                     <span class="c-purple">Elsayed</span>
@@ -362,7 +362,7 @@
                         <li class="mt-25 d-flex align-center current c-purple">Test The Project</li>
                         <li class="mt-25 d-flex align-center c-purple">Finish The Project & Get Money</li>
                     </ul>
-                    <img src="/img/shuttle.png" alt="" class="p-absolute">
+                    <img src="img/shuttle.png" alt="" class="p-absolute">
                 </div>
                 <!--Reminders-->
                 <div class="reminders bg-navy p-20 rad-10 block-mobile p-relative">
@@ -402,11 +402,11 @@
                 <div class="last-post bg-navy p-20 rad-10 block-mobile">
                     <h2 class="c-pink mb-20">Latest Posts</h2>
                     <div class="head d-flex align-center">
-                        <img class="mr-15 avtar" src="/img/avatar.png" alt="">
+                        <img class="mr-15 avtar" src="img/avatar.png" alt="">
                         <div>
                             <span class="d-block c-pink fw-bold">Elsayed Hassan</span>
                             <span class="c-purple">3 Hours Ago</span>
-                        </div>                        
+                        </div>
                     </div>
                     <div class="post-content pt-20 pb-20 mb-20 mt-20 c-pink">
                         You can fool all of the people some of the time, and some of the people all of the time, but you can't
@@ -515,7 +515,7 @@
                                 <td>Ministry</td>
                                 <td>$300</td>
                                 <td>
-                                    <img decoding="async" src="img/team-01.png" alt="" />                                    
+                                    <img decoding="async" src="img/team-01.png" alt="" />
                                     <img decoding="async" src="img/team-05.png" alt="" />
                                 </td>
                                 <td>
@@ -528,7 +528,7 @@
                                 <td>Ahmed</td>
                                 <td>$3300</td>
                                 <td>
-                                    <img decoding="async" src="img/team-01.png" alt="" />                                    
+                                    <img decoding="async" src="img/team-01.png" alt="" />
                                     <img decoding="async" src="img/team-03.png" alt="" />
                                     <img decoding="async" src="img/team-05.png" alt="" />
                                 </td>
