--- a/profile.html
+++ b/profile.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="icons d-flex align-center">
                     <i class="fa-regular fa-bell fa-lg c-pink p-relative"></i>
-                    <img src="/img/avatar.png" alt="">
+                    <img src="img/avatar.png" alt="">
                 </div>
             </div>
             <h1 class="p-relative c-pink">Profile</h1>
@@ -91,7 +91,7 @@
                 <!--create Overview widget-->
                <div class="overview bg-navy p-20 rad-10 mb-20 d-flex align-center">
                 <div class="avatar-box txt-c p-20">
-                    <img src="/img/avatar.png" class="rad-half">
+                    <img src="img/avatar.png" class="rad-half">
                     <h3 class="c-pink">Elsayed</h3>
                     <p class="c-purple mb-15">Level 99</p>
                     <div class="level bg-purple p-relative rad-6">
@@ -212,7 +212,7 @@
                     <h2 class="c-pink mb-10">Latest Activities</h2>
                     <p class="c-purple fs-16 mb-20">Latest Activities Done By The User</p>
                     <div class="activity d-flex align-center mb-15 bb p-20 txt-c-mobile">
-                        <img src="/img/activity-01.png" class="mr-10">
+                        <img src="img/activity-01.png" class="mr-10">
                         <div class="info">
                             <span class="d-block c-pink mb-5">Store</span>
                             <span class="c-purple">Bought The Mastering Python Course</span>
@@ -223,7 +223,7 @@
                         </div>
                     </div>
                     <div class="activity d-flex align-center mb-15 bb p-20 txt-c-mobile">
-                        <img src="/img/activity-02.png" class="mr-10">
+                        <img src="img/activity-02.png" class="mr-10">
                         <div class="info">
                             <span class="d-block c-pink mb-5">Store</span>
                             <span class="c-purple">Bought The Mastering Python Course</span>
@@ -234,7 +234,7 @@
                         </div>
                     </div>
                     <div class="activity d-flex align-center mb-15 bb p-20 txt-c-mobile">
-                        <img src="/img/activity-03.png" class="mr-10">
+                        <img src="img/activity-03.png" class="mr-10">
                         <div class="info">
                             <span class="d-block c-pink mb-5">Store</span>
                             <span class="c-purple">Bought The Mastering Python Course</span>
@@ -245,7 +245,7 @@
                         </div>
                     </div>
                     <div class="activity d-flex align-center mb-15 bb p-20 txt-c-mobile">
-                        <img src="/img/activity-01.png" class="mr-10">
+                        <img src="img/activity-01.png" class="mr-10">
                         <div class="info">
                             <span class="d-block c-pink mb-5">Store</span>
                             <span class="c-purple">Bought Clean Code Book</span>
