--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="icons d-flex align-center">
                     <i class="fa-regular fa-bell fa-lg c-pink p-relative"></i>
-                    <img src="/img/avatar.png" alt="">
+                    <img src="img/avatar.png" alt="">
                 </div>
             </div>
             <h1 class="p-relative c-pink">Projects</h1>
@@ -93,11 +93,11 @@
                     <h4 class="c-pink mb-5">Dashborad</h4>
                     <p class="c-purple">Dashboard Project Design And Programming And Hosting</p>
                     <div class="team mt-15 mb-15 p-relative">
-                        <a href="#" class="p-absolute"><img src="/img/team-01.png" ></a>
-                        <a href="#" class="p-absolute"><img src="/img/team-02.png" ></a>
-                        <a href="#" class="p-absolute"><img src="/img/team-03.png" ></a>
-                        <a href="#" class="p-absolute"><img src="/img/team-04.png" ></a>
-                        <a href="#" class="p-absolute"><img src="/img/team-05.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-01.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-02.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-03.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-04.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-05.png" ></a>
                     </div>
                     <div class="work d-flex end-flex">
                         <span class="fs-13 btn-shape bg-purple c-pink ml-5 mt-10 w-fit">Programming</span>
@@ -118,10 +118,10 @@
                     <h4 class="c-pink mb-5">E-learning</h4>
                     <p class="c-purple">E-learning Project Design And Programming And Hosting</p>
                     <div class="team mt-15 mb-15 p-relative">
-                        <a href="#" class="p-absolute"><img src="/img/team-01.png" ></a>
-                        <a href="#" class="p-absolute"><img src="/img/team-02.png" ></a>
-                        <a href="#" class="p-absolute"><img src="/img/team-03.png" ></a>
-                        <a href="#" class="p-absolute"><img src="/img/team-05.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-01.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-02.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-03.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-05.png" ></a>
                     </div>
                     <div class="work d-flex end-flex">
                         <span class="fs-13 btn-shape bg-purple c-pink ml-5 mt-10 w-fit">Programming</span>
@@ -144,11 +144,11 @@
                     <h4 class="c-pink mb-5">E-commerce</h4>
                     <p class="c-purple">E-commerce Project Design And Programming And Hosting</p>
                     <div class="team mt-15 mb-15 p-relative">
-                        <a href="#" class="p-absolute"><img src="/img/team-01.png" ></a>
-                        <a href="#" class="p-absolute"><img src="/img/team-02.png" ></a>
-                        <a href="#" class="p-absolute"><img src="/img/team-03.png" ></a>
-                        <a href="#" class="p-absolute"><img src="/img/team-04.png" ></a>
-                        <a href="#" class="p-absolute"><img src="/img/team-05.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-01.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-02.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-03.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-04.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-05.png" ></a>
                     </div>
                     <div class="work d-flex end-flex">
                         <span class="fs-13 btn-shape bg-purple c-pink ml-5 mt-10 w-fit">Programming</span>
@@ -171,9 +171,9 @@
                     <h4 class="c-pink mb-5">Landing Page</h4>
                     <p class="c-purple">Landing Page Project Design And Programming</p>
                     <div class="team mt-15 mb-15 p-relative">
-                        <a href="#" class="p-absolute"><img src="/img/team-01.png" ></a>
-                        <a href="#" class="p-absolute"><img src="/img/team-04.png" ></a>
-                        <a href="#" class="p-absolute"><img src="/img/team-05.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-01.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-04.png" ></a>
+                        <a href="#" class="p-absolute"><img src="img/team-05.png" ></a>
                     </div>
                     <div class="work d-flex end-flex">
                         <span class="fs-13 btn-shape bg-purple c-pink ml-5 mt-10 w-fit">Programming</span>
