--- a/settings.html
+++ b/settings.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="icons d-flex align-center">
                     <i class="fa-regular fa-bell fa-lg c-pink p-relative"></i>
-                    <img src="/img/avatar.png" alt="">
+                    <img src="img/avatar.png" alt="">
                 </div>
             </div>
             <h1 class="p-relative c-pink">Settings</h1>
