--- a/courses.html
+++ b/courses.html
@@ -82,15 +82,15 @@
               </div>
               <div class="icons d-flex align-center">
                   <i class="fa-regular fa-bell fa-lg c-pink p-relative"></i>
-                  <img src="/img/avatar.png" alt="">
+                  <img src="img/avatar.png" alt="">
               </div>
           </div>
           <h1 class="p-relative c-pink">Courses</h1>
           <!--Create body-->
           <div class="courses-page d-grid p-20 m-20 gap-20">
             <div class="courses-box rad-10 bg-navy p-relative p-10">
-              <img src="/img/course-01.jpg" class="rad-6">
-              <img src="/img/team-01.png" class="user p-absolute">
+              <img src="img/course-01.jpg" class="rad-6">
+              <img src="img/team-01.png" class="user p-absolute">
               <div class="p-20 w-fit">
                 <h4 class="c-pink mb-5">Mastering Web Design</h4>
                 <p class="c-purple fs-14">Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture</p>
@@ -108,8 +108,8 @@
               </div>
             </div>
             <div class="courses-box rad-10 bg-navy p-relative p-10">
-              <img src="/img/course-02.jpg" class="rad-6">
-              <img src="/img/team-02.png" class="user p-absolute">
+              <img src="img/course-02.jpg" class="rad-6">
+              <img src="img/team-02.png" class="user p-absolute">
               <div class="p-20 w-fit">
                 <h4 class="c-pink mb-5">Data Structure And Algorithms</h4>
                 <p class="c-purple fs-14">PHP Tutorials And Examples And Practice On Web Application And Connecting With Databases</p>
@@ -127,8 +127,8 @@
               </div>
             </div>
             <div class="courses-box rad-10 bg-navy p-relative p-10">
-              <img src="/img/course-04.jpg" class="rad-6">
-              <img src="/img/team-04.png" class="user p-absolute">
+              <img src="img/course-04.jpg" class="rad-6">
+              <img src="img/team-04.png" class="user p-absolute">
               <div class="p-20 w-fit">
                 <h4 class="c-pink mb-5">Mastering Python</h4>
                 <p class="c-purple fs-14">Mastering Python To Prepare For Data Science And AI And Automating Things in Your Life</p>
@@ -146,8 +146,8 @@
               </div>
             </div>
             <div class="courses-box rad-10 bg-navy p-relative p-10">
-              <img src="/img/course-03.jpg" class="rad-6">
-              <img src="/img/team-03.png" class="user p-absolute">
+              <img src="img/course-03.jpg" class="rad-6">
+              <img src="img/team-03.png" class="user p-absolute">
               <div class="p-20 w-fit">
                 <h4 class="c-pink mb-5">Responsive Web Design</h4>
                 <p class="c-purple fs-14">Mastering Responsive Web Design And Media Queries And Know Everything About Breakpoints</p>
@@ -165,8 +165,8 @@
               </div>
             </div>
             <div class="courses-box rad-10 bg-navy p-relative p-10">
-              <img src="/img/course-01.jpg" class="rad-6">
-              <img src="/img/team-01.png" class="user p-absolute">
+              <img src="img/course-01.jpg" class="rad-6">
+              <img src="img/team-01.png" class="user p-absolute">
               <div class="p-20 w-fit">
                 <h4 class="c-pink mb-5">Mastering Web Design</h4>
                 <p class="c-purple fs-14">Master The Art Of Web Designing And Mocking, Prototyping And Creating Web Design Architecture</p>
@@ -184,8 +184,8 @@
               </div>
             </div>
             <div class="courses-box rad-10 bg-navy p-relative p-10">
-              <img src="/img/course-02.jpg" class="rad-6">
-              <img src="/img/team-02.png" class="user p-absolute">
+              <img src="img/course-02.jpg" class="rad-6">
+              <img src="img/team-02.png" class="user p-absolute">
               <div class="p-20 w-fit">
                 <h4 class="c-pink mb-5">Data Structure And Algorithms</h4>
                 <p class="c-purple fs-14">PHP Tutorials And Examples And Practice On Web Application And Connecting With Databases</p>
@@ -203,8 +203,8 @@
               </div>
             </div>
             <div class="courses-box rad-10 bg-navy p-relative p-10">
-              <img src="/img/course-04.jpg" class="rad-6">
-              <img src="/img/team-04.png" class="user p-absolute">
+              <img src="img/course-04.jpg" class="rad-6">
+              <img src="img/team-04.png" class="user p-absolute">
               <div class="p-20 w-fit">
                 <h4 class="c-pink mb-5">Mastering Python</h4>
                 <p class="c-purple fs-14">Mastering Python To Prepare For Data Science And AI And Automating Things in Your Life</p>
@@ -222,8 +222,8 @@
               </div>
             </div>
             <div class="courses-box rad-10 bg-navy p-relative p-10">
-              <img src="/img/course-03.jpg" class="rad-6">
-              <img src="/img/team-03.png" class="user p-absolute">
+              <img src="img/course-03.jpg" class="rad-6">
+              <img src="img/team-03.png" class="user p-absolute">
               <div class="p-20 w-fit">
                 <h4 class="c-pink mb-5">Responsive Web Design</h4>
                 <p class="c-purple fs-14">Mastering Responsive Web Design And Media Queries And Know Everything About Breakpoints</p>
