--- a/files.html
+++ b/files.html
@@ -15,7 +15,7 @@
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&family=Work+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,800;0,900;1,300;1,800&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&family=Work+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,800;0,900;1,300;1,800&display=swap" rel="stylesheet">
     <title>Files</title>
 </head>
 <body>
@@ -82,7 +82,7 @@
               </div>
               <div class="icons d-flex align-center">
                   <i class="fa-regular fa-bell fa-lg c-pink p-relative"></i>
-                  <img src="/img/avatar.png" alt="">
+                  <img src="img/avatar.png" alt="">
               </div>
           </div>
           <h1 class="p-relative c-pink">Files</h1>
@@ -131,7 +131,7 @@
                 <div class="file-box rad-10 bg-navy p-10">
                     <i class="fa-solid fa-download c-pink p-absolute"></i>
                     <div class="txt-c mb-15">
-                        <img src="/img/pdf (2).png" class="mb-10 mt-10">
+                        <img src="img/pdf (2).png" class="mb-10 mt-10">
                         <p class="c-pink mt-5">My PDf File</p>
                     </div>
                     <p class="c-purple fw-bold mb-5">Elsayed</p>
@@ -143,7 +143,7 @@
                 <div class="file-box rad-10 bg-navy p-10">
                     <i class="fa-solid fa-download c-pink p-absolute"></i>
                     <div class="txt-c mb-15">
-                        <img src="/img/dll.png" class="mb-10 mt-10">
+                        <img src="img/dll.png" class="mb-10 mt-10">
                         <p class="c-pink mt-5">My DLL File</p>
                     </div>
                     <p class="c-purple fw-bold mb-5">Elsayed</p>
@@ -155,7 +155,7 @@
                 <div class="file-box rad-10 bg-navy p-10">
                     <i class="fa-solid fa-download c-pink p-absolute"></i>
                     <div class="txt-c mb-15">
-                        <img src="/img/avi.png" class="mb-10 mt-10">
+                        <img src="img/avi.png" class="mb-10 mt-10">
                         <p class="c-pink mt-5">My AVI File</p>
                     </div>
                     <p class="c-purple fw-bold mb-5">Elsayed</p>
@@ -167,7 +167,7 @@
                 <div class="file-box rad-10 bg-navy p-10">
                     <i class="fa-solid fa-download c-pink p-absolute"></i>
                     <div class="txt-c mb-15">
-                        <img src="/img/zip.png" class="mb-10 mt-10">
+                        <img src="img/zip.png" class="mb-10 mt-10">
                         <p class="c-pink mt-5">My Zip File</p>
                     </div>
                     <p class="c-purple fw-bold mb-5">Elsayed</p>
@@ -179,7 +179,7 @@
                 <div class="file-box rad-10 bg-navy p-10">
                     <i class="fa-solid fa-download c-pink p-absolute"></i>
                     <div class="txt-c mb-15">
-                        <img src="/img/psd.png" class="mb-10 mt-10">
+                        <img src="img/psd.png" class="mb-10 mt-10">
                         <p class="c-pink mt-5">My PSD File</p>
                     </div>
                     <p class="c-purple fw-bold mb-5">Elsayed</p>
@@ -191,7 +191,7 @@
                 <div class="file-box rad-10 bg-navy p-10">
                     <i class="fa-solid fa-download c-pink p-absolute"></i>
                     <div class="txt-c mb-15">
-                        <img src="/img/pdf (2).png" class="mb-10 mt-10">
+                        <img src="img/pdf (2).png" class="mb-10 mt-10">
                         <p class="c-pink mt-5">My PDf File</p>
                     </div>
                     <p class="c-purple fw-bold mb-5">Elsayed</p>
@@ -203,7 +203,7 @@
                 <div class="file-box rad-10 bg-navy p-10">
                     <i class="fa-solid fa-download c-pink p-absolute"></i>
                     <div class="txt-c mb-15">
-                        <img src="/img/dll.png" class="mb-10 mt-10">
+                        <img src="img/dll.png" class="mb-10 mt-10">
                         <p class="c-pink mt-5">My DLL File</p>
                     </div>
                     <p class="c-purple fw-bold mb-5">Elsayed</p>
@@ -215,7 +215,7 @@
                 <div class="file-box rad-10 bg-navy p-10">
                     <i class="fa-solid fa-download c-pink p-absolute"></i>
                     <div class="txt-c mb-15">
-                        <img src="/img/avi.png" class="mb-10 mt-10">
+                        <img src="img/avi.png" class="mb-10 mt-10">
                         <p class="c-pink mt-5">My AVI File</p>
                     </div>
                     <p class="c-purple fw-bold mb-5">Elsayed</p>
@@ -227,7 +227,7 @@
                 <div class="file-box rad-10 bg-navy p-10">
                     <i class="fa-solid fa-download c-pink p-absolute"></i>
                     <div class="txt-c mb-15">
-                        <img src="/img/zip.png" class="mb-10 mt-10">
+                        <img src="img/zip.png" class="mb-10 mt-10">
                         <p class="c-pink mt-5">My Zip File</p>
                     </div>
                     <p class="c-purple fw-bold mb-5">Elsayed</p>
@@ -239,7 +239,7 @@
                 <div class="file-box rad-10 bg-navy p-10">
                     <i class="fa-solid fa-download c-pink p-absolute"></i>
                     <div class="txt-c mb-15">
-                        <img src="/img/psd.png" class="mb-10 mt-10">
+                        <img src="img/psd.png" class="mb-10 mt-10">
                         <p class="c-pink mt-5">My PSD File</p>
                     </div>
                     <p class="c-purple fw-bold mb-5">Elsayed</p>
@@ -251,7 +251,7 @@
                 <div class="file-box rad-10 bg-navy p-10">
                     <i class="fa-solid fa-download c-pink p-absolute"></i>
                     <div class="txt-c mb-15">
-                        <img src="/img/pdf (2).png" class="mb-10 mt-10">
+                        <img src="img/pdf (2).png" class="mb-10 mt-10">
                         <p class="c-pink mt-5">My PDf File</p>
                     </div>
                     <p class="c-purple fw-bold mb-5">Elsayed</p>
@@ -263,7 +263,7 @@
                 <div class="file-box rad-10 bg-navy p-10">
                     <i class="fa-solid fa-download c-pink p-absolute"></i>
                     <div class="txt-c mb-15">
-                        <img src="/img/dll.png" class="mb-10 mt-10">
+                        <img src="img/dll.png" class="mb-10 mt-10">
                         <p class="c-pink mt-5">My DLL File</p>
                     </div>
                     <p class="c-purple fw-bold mb-5">Elsayed</p>
@@ -275,7 +275,7 @@
                 <div class="file-box rad-10 bg-navy p-10">
                     <i class="fa-solid fa-download c-pink p-absolute"></i>
                     <div class="txt-c mb-15">
-                        <img src="/img/avi.png" class="mb-10 mt-10">
+                        <img src="img/avi.png" class="mb-10 mt-10">
                         <p class="c-pink mt-5">My AVI File</p>
                     </div>
                     <p class="c-purple fw-bold mb-5">Elsayed</p>
@@ -287,7 +287,7 @@
                 <div class="file-box rad-10 bg-navy p-10">
                     <i class="fa-solid fa-download c-pink p-absolute"></i>
                     <div class="txt-c mb-15">
-                        <img src="/img/zip.png" class="mb-10 mt-10">
+                        <img src="img/zip.png" class="mb-10 mt-10">
                         <p class="c-pink mt-5">My Zip File</p>
                     </div>
                     <p class="c-purple fw-bold mb-5">Elsayed</p>
@@ -299,7 +299,7 @@
                 <div class="file-box rad-10 bg-navy p-10">
                     <i class="fa-solid fa-download c-pink p-absolute"></i>
                     <div class="txt-c mb-15">
-                        <img src="/img/psd.png" class="mb-10 mt-10">
+                        <img src="img/psd.png" class="mb-10 mt-10">
                         <p class="c-pink mt-5">My PSD File</p>
                     </div>
                     <p class="c-purple fw-bold mb-5">Elsayed</p>
